// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Logo renders the UI snapshot correctly 1`] = `
<svg
  aria-hidden={false}
  className="chakra-icon css-1vgifmd"
  data-file-name="SvgLogoNyplFullBlack"
  focusable={false}
  id="test-logo"
  role="img"
  title="nyplFullBlack logo"
/>
`;

exports[`Logo renders the UI snapshot correctly 2`] = `
<svg
  aria-hidden={false}
  className="chakra-icon css-1vgifmd"
  data-file-name="SvgLogoNyplFullBlack"
  focusable={false}
  id="test-logo-size"
  role="img"
  title="nyplFullBlack logo"
/>
`;

exports[`Logo renders the UI snapshot correctly 3`] = `
<svg
  aria-hidden={false}
  className="chakra-icon css-1vgifmd"
  data-file-name="SvgLogoNyplFullBlack"
  focusable={false}
  id="test-logo-size"
  role="img"
  title="nyplFullBlack logo"
/>
`;

exports[`Logo renders the UI snapshot correctly 4`] = `
<svg
  aria-hidden={false}
  className="chakra-icon css-mdh75w"
  data-file-name="SvgLogoNyplFullBlack"
  focusable={false}
  id="chakra"
  role="img"
  title="nyplFullBlack logo"
/>
`;

exports[`Logo renders the UI snapshot correctly 5`] = `
<svg
  aria-hidden={false}
  className="chakra-icon css-1vgifmd"
  data-file-name="SvgLogoNyplFullBlack"
  data-testid="props"
  focusable={false}
  id="props"
  role="img"
  title="nyplFullBlack logo"
/>
`;
